--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "59d94274",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,233 @@
     "import matplotlib.pyplot as plt\n",
     "import sklearn.linear_model as LinearRegression\n",
     "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2118596",
+   "metadata": {},
+   "source": [
+    "## **Crear DataFrame**\n",
+    "- Creamos el DataFrame con el dataset que hemos descargado (StudentsPerformance.csv).\n",
+    "- Imprimimos las 5 últimas filas para verificar que existan hasta 1000 filas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dc93ebd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>88</td>\n",
+       "      <td>99</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>62</td>\n",
+       "      <td>55</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>59</td>\n",
+       "      <td>71</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>68</td>\n",
+       "      <td>78</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gender race/ethnicity parental level of education         lunch  \\\n",
+       "995  female        group E             master's degree      standard   \n",
+       "996    male        group C                 high school  free/reduced   \n",
+       "997  female        group C                 high school  free/reduced   \n",
+       "998  female        group D                some college      standard   \n",
+       "999  female        group D                some college  free/reduced   \n",
+       "\n",
+       "    test preparation course  math score  reading score  writing score  \n",
+       "995               completed          88             99             95  \n",
+       "996                    none          62             55             55  \n",
+       "997               completed          59             71             65  \n",
+       "998               completed          68             78             77  \n",
+       "999                    none          77             86             86  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('StudentsPerformance.csv')\n",
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55adc87f",
+   "metadata": {},
+   "source": [
+    "## **Analizar columnas**\n",
+    "- Verificamos cada columna en busca de alguna incongruencia o falta de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7a5707ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   gender                       1000 non-null   object\n",
+      " 1   race/ethnicity               1000 non-null   object\n",
+      " 2   parental level of education  1000 non-null   object\n",
+      " 3   lunch                        1000 non-null   object\n",
+      " 4   test preparation course      1000 non-null   object\n",
+      " 5   math score                   1000 non-null   int64 \n",
+      " 6   reading score                1000 non-null   int64 \n",
+      " 7   writing score                1000 non-null   int64 \n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 62.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "gender                         0\n",
+       "race/ethnicity                 0\n",
+       "parental level of education    0\n",
+       "lunch                          0\n",
+       "test preparation course        0\n",
+       "math score                     0\n",
+       "reading score                  0\n",
+       "writing score                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.info()\n",
+    "\n",
+    "df.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63dc75c1",
+   "metadata": {},
+   "source": [
+    "## **Seleccionar las columnas a trabajar**\n",
+    "- Selecionamos las dos columnas del DataFrame con las que vamos a trabajar.\n",
+    "- Calculamos el promedio de de notas de cada una."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "86d74272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "reading score    69.169\n",
+       "math score       66.089\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['reading score', 'math score']].mean()"
    ]
   }
  ],
@@ -29,7 +256,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
